# dlc-generic-analysis

./: .gitignore  README.md  dlc.py  geometries.py  main.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini  trimmer.py  trimmer_gui.py  utils.py  video_tools.py  viewer.py
.circleci/: config.yml
.github/: test.yml
.github/workflows/: black.yml  ossar-analysis.yml  publish.yml  test.yml
dlc_generic_analysis/: __init__.py  analysis.py  dlc.py  dlc_generic_analysis.py  filter.py  geometries.py  gui_objects.py  gui_utils.py  line.py  math_utils.py  trimmer.py  utils.py  video_tools.py  viewer.py
dlc_generic_analysis/_tests/: test_analysis.py  test_analyze.py  test_data.py  test_dlc_generic_analysis.py  test_filter.py  test_geometries.py  test_gui_objects.py  test_line.py  test_math_utils.py  test_trimmer.py  test_utils.py  test_viewer.py
docs/: getting_started.md
