[metadata]
name = dlc-generic-analysis
author = Louis Adamian
author_email = ladamian@meei.harvard.edu
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: DeepLabCut
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = find:
python_requires = ~=3.8
package_dir=
    =.
setup_requires = setuptools_scm

install_requires =
    tomli~=1.2.2
    numpy~=1.20.3
    pandas~=1.3.4
    QtPy~=1.11.2
    deeplabcut~=2.2.0.3
    opencv-python~=4.5.4.60
    tqdm~=4.62.3
    matplotlib~=3.5.0
    PySide2~=5.15.2
    moviepy~=1.0.3
    scipy~=1.7.3
    QtAwesome~=1.1.1