[metadata]
name = dlc-generic-analysis
author = Louis Adamian
author_email = ladamian@meei.harvard.edu
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
package_dir=
    =.
setup_requires = setuptools_scm
install_requires =
    tomli>=1.2.2
    numpy~=1.20.3
    pandas>=1.3.4
    opencv-python-headless>=4.5.4.60
    deeplabcut>=2.2.0.3
    tqdm>=4.62.3
    matplotlib>=3.5.0
    moviepy>=1.0.3
    scipy>=1.7.3
    tables>=3.6.0
extras_requires =
    gui = QtPy>=1.11.2; PySide2>=5.15.2; QtAwesome>=1.1.1

