[metadata]
name = dlc-generic-analysis
author = Louis Adamian
author_email = ladamian@meei.harvard.edu
description = A framework for creating analysis applications for DeepLabCut with a gui build in Qt.
long_description = file: README.md
license = LGPL-3.0-or-later
license_file = LICENSE
long_description_content_type = text/markdown
url = https://github.com/SurgicalPhotonics/dlc-generic-analysis
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English

[options]
packages = find:
python_requires = >=3.7
package_dir=
    =.
setup_requires = setuptools_scm
install_requires =
    numpy>=1.21.0
    pandas>=1.3.4
    opencv-python-headless~=4.1.2.30
    deeplabcut>=2.2.0.3
    tqdm>=4.62.3
    matplotlib>=3.5.0
    moviepy>=1.0.3
    scipy>=1.7.3
    tables>=3.6.0

[options.extras_require]
gui =
    QtPy>=1.11.2
    PySide2>=5.15.2
    QtAwesome>=1.1.1